trunk/src/principal/CommandLineParser.java
// $ANTLR 3.4 /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g 2013-01-05 12:18:25

	package principal;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class CommandLineParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AF", "AG", "AND", "ATOM", "AU", "AX", "CHAR", "DEAD", "EF", "EG", "ENABLE", "EQUIV", "ESC_SEQ", "EU", "EX", "EXPONENT", "FALSE", "HEX_DIGIT", "IMPLY", "INITIAL", "LETTER", "NEG", "NUMBER", "OCTAL_ESC", "OR", "STRING", "STRING_FILE_DOT", "STRING_FILE_NET", "TRUE", "UNICODE_ESC", "WS", "'!'", "'('", "')'", "'-'", "'.'", "'../'", "'./'", "'/'", "';'", "'A'", "'AF'", "'AG'", "'AX'", "'E'", "'EF'", "'EG'", "'EX'", "'Justifie'", "'Justifietodot'", "'U'", "'_'", "'ctl'", "'ctltodot'", "'dead'", "'dot'", "'enable'", "'false'", "'graphe'", "'initial'", "'load'", "'look'", "'net'", "'shell'", "'stop'", "'succ'", "'todot'", "'true'"
    };

    public static final int EOF=-1;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int AF=4;
    public static final int AG=5;
    public static final int AND=6;
    public static final int ATOM=7;
    public static final int AU=8;
    public static final int AX=9;
    public static final int CHAR=10;
    public static final int DEAD=11;
    public static final int EF=12;
    public static final int EG=13;
    public static final int ENABLE=14;
    public static final int EQUIV=15;
    public static final int ESC_SEQ=16;
    public static final int EU=17;
    public static final int EX=18;
    public static final int EXPONENT=19;
    public static final int FALSE=20;
    public static final int HEX_DIGIT=21;
    public static final int IMPLY=22;
    public static final int INITIAL=23;
    public static final int LETTER=24;
    public static final int NEG=25;
    public static final int NUMBER=26;
    public static final int OCTAL_ESC=27;
    public static final int OR=28;
    public static final int STRING=29;
    public static final int STRING_FILE_DOT=30;
    public static final int STRING_FILE_NET=31;
    public static final int TRUE=32;
    public static final int UNICODE_ESC=33;
    public static final int WS=34;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CommandLineParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CommandLineParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return CommandLineParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g"; }


    	private ICallback callback;
    	private boolean programDeclDone;
    	private boolean usesDeclAllowed;
    	
    	public CommandLineParser(final ICallback callback) {
    		super(null);
    		this.callback = callback;
    		programDeclDone = false;
    		usesDeclAllowed = true;
    	}
    	
    	private void onShell() {
    		callback.shell();
    	}
    	
    	private void onLoad(final String filename) {
    		callback.load(filename);
    	}
    	
    	private void onGraphe() {
    		callback.graphe();
    	}
    	
    	private void onLook(final int etat) {
    		callback.look(etat);
    	}
    	
    	private void onSucc(final int etat) {
    		callback.succ(etat);
    	}
    	
    	private void onToDot(final String filename) {
    		callback.toDot(filename);
    	}
    	
    	private void onCtl(final Tree formule) {
    		callback.ctl(formule);
    	}
    	
    	private void onCtl(final Tree formule, final int etat) {
    		callback.ctl(formule, etat);
    	}
    	
    	private void onCtlToDot(final Tree formule, final String filename) {
    		callback.ctlToDot(formule, filename);
    	}
    	
    	private void onJustifie(final Tree formule, final int etat) {
    		callback.justifie(formule, etat);
    	}
    	
    	private void onJustifieToDot(final Tree formule, final int etat, final String filename) {
    		callback.justifieToDot(formule, etat, filename);
    	}
    	
    	private void onStop() {
    		callback.stop();
    	}

    	public void process(String source) throws Exception {
    		ANTLRStringStream in = new ANTLRStringStream(source);
    		CommandLineLexer lexer = new CommandLineLexer(in);
     		CommonTokenStream tokens = new CommonTokenStream(lexer);
     		super.setTokenStream(tokens);
     		this.start();
    	} 
    	
    	private Tree formule(final Object f) {
    		return (Tree) f;
    	}
    	
    	private int etat(final String e) {
    		return Integer.parseInt(e);
    	}
    		
    	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
    		String hdr = getErrorHeader(e);
    		String msg = getErrorMessage(e, tokenNames);
    		System.out.println(hdr + " " + msg);
    	}


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:116:1: start : instruction ( ';' instruction )* ;
    public final CommandLineParser.start_return start() throws RecognitionException {
        CommandLineParser.start_return retval = new CommandLineParser.start_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal2=null;
        CommandLineParser.instruction_return instruction1 =null;

        CommandLineParser.instruction_return instruction3 =null;


        Object char_literal2_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:117:2: ( instruction ( ';' instruction )* )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:117:4: instruction ( ';' instruction )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_instruction_in_start111);
            instruction1=instruction();

            state._fsp--;

            adaptor.addChild(root_0, instruction1.getTree());

            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:117:16: ( ';' instruction )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==43) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:117:17: ';' instruction
            	    {
            	    char_literal2=(Token)match(input,43,FOLLOW_43_in_start114); 
            	    char_literal2_tree = 
            	    (Object)adaptor.create(char_literal2)
            	    ;
            	    adaptor.addChild(root_0, char_literal2_tree);


            	    pushFollow(FOLLOW_instruction_in_start116);
            	    instruction3=instruction();

            	    state._fsp--;

            	    adaptor.addChild(root_0, instruction3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start"


    public static class instruction_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "instruction"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:120:1: instruction : ( shell | load | graphe | look | succ | todot | ctl | ctltodot | justifie | justifietodot | stop );
    public final CommandLineParser.instruction_return instruction() throws RecognitionException {
        CommandLineParser.instruction_return retval = new CommandLineParser.instruction_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        CommandLineParser.shell_return shell4 =null;

        CommandLineParser.load_return load5 =null;

        CommandLineParser.graphe_return graphe6 =null;

        CommandLineParser.look_return look7 =null;

        CommandLineParser.succ_return succ8 =null;

        CommandLineParser.todot_return todot9 =null;

        CommandLineParser.ctl_return ctl10 =null;

        CommandLineParser.ctltodot_return ctltodot11 =null;

        CommandLineParser.justifie_return justifie12 =null;

        CommandLineParser.justifietodot_return justifietodot13 =null;

        CommandLineParser.stop_return stop14 =null;



        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:121:2: ( shell | load | graphe | look | succ | todot | ctl | ctltodot | justifie | justifietodot | stop )
            int alt2=11;
            switch ( input.LA(1) ) {
            case 67:
                {
                alt2=1;
                }
                break;
            case 64:
                {
                alt2=2;
                }
                break;
            case 62:
                {
                alt2=3;
                }
                break;
            case 65:
                {
                alt2=4;
                }
                break;
            case 69:
                {
                alt2=5;
                }
                break;
            case 70:
                {
                alt2=6;
                }
                break;
            case 56:
                {
                alt2=7;
                }
                break;
            case 57:
                {
                alt2=8;
                }
                break;
            case 52:
                {
                alt2=9;
                }
                break;
            case 53:
                {
                alt2=10;
                }
                break;
            case 68:
                {
                alt2=11;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:121:4: shell
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_shell_in_instruction129);
                    shell4=shell();

                    state._fsp--;

                    adaptor.addChild(root_0, shell4.getTree());

                    }
                    break;
                case 2 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:122:4: load
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_load_in_instruction134);
                    load5=load();

                    state._fsp--;

                    adaptor.addChild(root_0, load5.getTree());

                    }
                    break;
                case 3 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:123:4: graphe
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_graphe_in_instruction139);
                    graphe6=graphe();

                    state._fsp--;

                    adaptor.addChild(root_0, graphe6.getTree());

                    }
                    break;
                case 4 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:124:4: look
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_look_in_instruction144);
                    look7=look();

                    state._fsp--;

                    adaptor.addChild(root_0, look7.getTree());

                    }
                    break;
                case 5 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:125:4: succ
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_succ_in_instruction149);
                    succ8=succ();

                    state._fsp--;

                    adaptor.addChild(root_0, succ8.getTree());

                    }
                    break;
                case 6 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:126:4: todot
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_todot_in_instruction154);
                    todot9=todot();

                    state._fsp--;

                    adaptor.addChild(root_0, todot9.getTree());

                    }
                    break;
                case 7 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:127:4: ctl
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ctl_in_instruction159);
                    ctl10=ctl();

                    state._fsp--;

                    adaptor.addChild(root_0, ctl10.getTree());

                    }
                    break;
                case 8 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:128:4: ctltodot
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ctltodot_in_instruction164);
                    ctltodot11=ctltodot();

                    state._fsp--;

                    adaptor.addChild(root_0, ctltodot11.getTree());

                    }
                    break;
                case 9 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:129:4: justifie
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_justifie_in_instruction169);
                    justifie12=justifie();

                    state._fsp--;

                    adaptor.addChild(root_0, justifie12.getTree());

                    }
                    break;
                case 10 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:130:4: justifietodot
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_justifietodot_in_instruction174);
                    justifietodot13=justifietodot();

                    state._fsp--;

                    adaptor.addChild(root_0, justifietodot13.getTree());

                    }
                    break;
                case 11 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:131:4: stop
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_stop_in_instruction179);
                    stop14=stop();

                    state._fsp--;

                    adaptor.addChild(root_0, stop14.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "instruction"


    public static class shell_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "shell"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:134:1: shell : 'shell' ;
    public final CommandLineParser.shell_return shell() throws RecognitionException {
        CommandLineParser.shell_return retval = new CommandLineParser.shell_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal15=null;

        Object string_literal15_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:135:2: ( 'shell' )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:135:4: 'shell'
            {
            root_0 = (Object)adaptor.nil();


            string_literal15=(Token)match(input,67,FOLLOW_67_in_shell191); 
            string_literal15_tree = 
            (Object)adaptor.create(string_literal15)
            ;
            adaptor.addChild(root_0, string_literal15_tree);


             onShell(); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "shell"


    public static class load_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "load"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:138:1: load : 'load' p1= file_net ;
    public final CommandLineParser.load_return load() throws RecognitionException {
        CommandLineParser.load_return retval = new CommandLineParser.load_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal16=null;
        CommandLineParser.file_net_return p1 =null;


        Object string_literal16_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:139:2: ( 'load' p1= file_net )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:139:4: 'load' p1= file_net
            {
            root_0 = (Object)adaptor.nil();


            string_literal16=(Token)match(input,64,FOLLOW_64_in_load204); 
            string_literal16_tree = 
            (Object)adaptor.create(string_literal16)
            ;
            adaptor.addChild(root_0, string_literal16_tree);


            pushFollow(FOLLOW_file_net_in_load208);
            p1=file_net();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

             onLoad((p1!=null?input.toString(p1.start,p1.stop):null)); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "load"


    public static class graphe_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "graphe"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:142:1: graphe : 'graphe' ;
    public final CommandLineParser.graphe_return graphe() throws RecognitionException {
        CommandLineParser.graphe_return retval = new CommandLineParser.graphe_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal17=null;

        Object string_literal17_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:143:2: ( 'graphe' )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:143:4: 'graphe'
            {
            root_0 = (Object)adaptor.nil();


            string_literal17=(Token)match(input,62,FOLLOW_62_in_graphe222); 
            string_literal17_tree = 
            (Object)adaptor.create(string_literal17)
            ;
            adaptor.addChild(root_0, string_literal17_tree);


             onGraphe(); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "graphe"


    public static class look_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "look"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:146:1: look : 'look' p1= etat ;
    public final CommandLineParser.look_return look() throws RecognitionException {
        CommandLineParser.look_return retval = new CommandLineParser.look_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal18=null;
        CommandLineParser.etat_return p1 =null;


        Object string_literal18_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:147:2: ( 'look' p1= etat )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:147:4: 'look' p1= etat
            {
            root_0 = (Object)adaptor.nil();


            string_literal18=(Token)match(input,65,FOLLOW_65_in_look236); 
            string_literal18_tree = 
            (Object)adaptor.create(string_literal18)
            ;
            adaptor.addChild(root_0, string_literal18_tree);


            pushFollow(FOLLOW_etat_in_look240);
            p1=etat();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

            onLook(etat((p1!=null?input.toString(p1.start,p1.stop):null))); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "look"


    public static class succ_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "succ"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:150:1: succ : 'succ' p1= etat ;
    public final CommandLineParser.succ_return succ() throws RecognitionException {
        CommandLineParser.succ_return retval = new CommandLineParser.succ_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal19=null;
        CommandLineParser.etat_return p1 =null;


        Object string_literal19_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:151:2: ( 'succ' p1= etat )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:151:4: 'succ' p1= etat
            {
            root_0 = (Object)adaptor.nil();


            string_literal19=(Token)match(input,69,FOLLOW_69_in_succ254); 
            string_literal19_tree = 
            (Object)adaptor.create(string_literal19)
            ;
            adaptor.addChild(root_0, string_literal19_tree);


            pushFollow(FOLLOW_etat_in_succ258);
            p1=etat();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

             onSucc(etat((p1!=null?input.toString(p1.start,p1.stop):null))); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "succ"


    public static class todot_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "todot"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:154:1: todot : 'todot' p1= file_dot ;
    public final CommandLineParser.todot_return todot() throws RecognitionException {
        CommandLineParser.todot_return retval = new CommandLineParser.todot_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal20=null;
        CommandLineParser.file_dot_return p1 =null;


        Object string_literal20_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:155:2: ( 'todot' p1= file_dot )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:155:4: 'todot' p1= file_dot
            {
            root_0 = (Object)adaptor.nil();


            string_literal20=(Token)match(input,70,FOLLOW_70_in_todot272); 
            string_literal20_tree = 
            (Object)adaptor.create(string_literal20)
            ;
            adaptor.addChild(root_0, string_literal20_tree);


            pushFollow(FOLLOW_file_dot_in_todot276);
            p1=file_dot();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

             onToDot((p1!=null?input.toString(p1.start,p1.stop):null)); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "todot"


    public static class ctl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

